--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 50px;
+    padding: 50px 0px;
 }
 
 .canvas {
@@ -19,7 +19,42 @@ body {
 
 .controls {
     margin-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
+
+.controls .controls__btns {
+    margin-bottom: 30px;
+}
+
+.controls__btns button {
+    all: unset;
+    cursor: pointer;
+    background-color: white;
+    padding: 5px 0px;
+    width: 80px;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    color: rgba(0, 0, 0, 0.5);
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 12px;
+}
+
+/* 버튼 클릭 시 작아지며 움직이는 느낌 */
+.controls__btns button:active {
+    transform: scale(0.96);
+}
+
+/* 마우스가 버튼 위에 올 경우 색 진하게 */
+.controls__btns button:hover {
+    background-color: rgb(238, 239, 240);
+}
+
 
 .controls .controls__colors {
     display: flex;
@@ -30,4 +65,8 @@ body {
     height: 50px;
     border-radius: 25px;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+
+.controls .controls__range {
+    margin-bottom: 30px;
 }
