--- a/styles.css
+++ b/styles.css
@@ -1,72 +1,99 @@
 @import "reset.css";
 body {
-    background-color: #f6f9fc;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, 
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 50px 0px;
+  background-color: #f6f9fc;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px 0px;
 }
 
 .canvas {
-    width: 700px;
-    height: 700px;
-    background-color: white;
-    border-radius: 15px;
-    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+  width: 700px;
+  height: 700px;
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
 
 .controls {
-    margin-top: 80px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+.controls .controls__modes {
+  margin-bottom: 30px;
+}
+
+/* 나와있는 버튼처럼 보이는 그림자 설정 */
+.controls__modes button {
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  background-color: white;
+  cursor: pointer;
+  outline: none;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  margin: 0px 20px 0px;
+  box-shadow: 1px 4px 0 rgb(0, 0, 0, 0.5);
+}
+
+/* 버튼 클릭시 누르는 효과 내기 */
+.controls__modes button:active {
+  box-shadow: 1px 1px 0 rgb(0, 0, 0, 0.5);
+  position: relative;
+  top: 2px;
+}
+
+.controls__modes button:hover {
+  background-color: beige;
 }
 
 .controls .controls__btns {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .controls__btns button {
-    all: unset;
-    cursor: pointer;
-    background-color: white;
-    padding: 5px 0px;
-    width: 80px;
-    text-align: center;
-    border-radius: 5px;
-    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    color: rgba(0, 0, 0, 0.5);
-    text-transform: uppercase;
-    font-weight: 800;
-    font-size: 12px;
+  all: unset;
+  cursor: pointer;
+  background-color: white;
+  padding: 5px 0px;
+  width: 80px;
+  text-align: center;
+  border-radius: 5px;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  color: rgba(0, 0, 0, 0.5);
+  text-transform: uppercase;
+  font-weight: 800;
+  font-size: 12px;
+  margin: 0px 10px 0px;
 }
 
 /* 버튼 클릭 시 작아지며 움직이는 느낌 */
 .controls__btns button:active {
-    transform: scale(0.96);
+  transform: scale(0.96);
 }
 
 /* 마우스가 버튼 위에 올 경우 색 진하게 */
 .controls__btns button:hover {
-    background-color: rgb(238, 239, 240);
+  background-color: rgb(238, 239, 240);
 }
-
 
 .controls .controls__colors {
-    display: flex;
+  display: flex;
 }
 
-.controls__colors  .controls__color {
-    width: 50px;
-    height: 50px;
-    border-radius: 25px;
-    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+.controls__colors .controls__color {
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
 
 .controls .controls__range {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
